--- a/register.html
+++ b/register.html
@@ -25,20 +25,20 @@
 <div class="register-page">
     <div class="heading">
         <img style="margin-right: 10px; height: 100px;" src="./assets/images/Group 1.png" alt="" srcset="">
-    <h2>REGISTER HERE</h2>
+    <h2 style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">REGISTER HERE</h2>
 </div>
     <div class="formdiv">
         
-        <label for="name">Name</label>
+        <label style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" for="name">Name</label>
         <input type="text">
 
-        <label for="email">Email</label>
+        <label style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" for="email">Email</label>
         <input type="email">
 
-        <label for="phone">Phone</label>
+        <label  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" for="phone">Phone</label>
         <input type="number">
 
-        <label for="phone">Plan</label>
+        <label  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" for="phone">Plan</label>
         <input type="text">
 
         <button type="submit">REGISTER HERE</button>
