--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li><a href="#navlinks-res">Home</a> </li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#pricing">Pricing</a></li>
-                <li><a href="#">Register</a></li>
+                <li><a href="register.html">Register</a></li>
         </ul>
     </div>
     <div class="landingPage" id="landing-page">
